# agentmesh

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agentmesh/: __init__.py  __main__.py  config.py
agentmesh/api/: app.py
agentmesh/critic/: __init__.py  critic.py
agentmesh/llm/: __init__.py  anthropic_client.py
agentmesh/mcp_client/: __init__.py  client.py  demo_server.py
agentmesh/memory/: __init__.py  base.py  episodic.py  procedural.py  semantic.py
agentmesh/orchestrator/: __init__.py  core.py
agentmesh/utils/: logging.py  types.py
benchmarks/: langgraph_baseline.py  run_benchmark.py  tasks.py
benchmarks/results/: example_run.json
docs/: ARCHITECTURE.md  BENCHMARKS.md
examples/: custom_mcp_server.py  memory_across_sessions.py  quickstart.py
scripts/: verify_install.py
tests/: conftest.py  test_benchmark_graders.py  test_critic.py  test_mcp_integration.py  test_memory.py  test_orchestrator.py  test_types.py
